P5 E-Learning/force-app/main/default/objects/Trail__c/fields/Module_Related__c.field-meta.xml
<CustomField>
    <fullName>Module_Related__c</fullName>
    <label>Module Related</label>
    <summaryForeignKey>Progress_Trail_Per_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>