P5 E-Learning/force-app/main/default/objects/Trail__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Progress_Trail_Per_Module__c.Score__c</summarizedField>
    <summaryForeignKey>Progress_Trail_Per_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>