P5 E-Learning/force-app/main/default/objects/Trail__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <summarizedField>Progress_Trail_Per_Module__c.Time__c</summarizedField>
    <summaryForeignKey>Progress_Trail_Per_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>